--- a/scss/components/pages/_mainHome.scss
+++ b/scss/components/pages/_mainHome.scss
@@ -19,23 +19,36 @@
         width: 90%;
         height: 90%;
         text-align: center;
+        color: ghostwhite;
+        
 
         &__image{
-            background: url("../../../images/home_page/attacca/attacca_group_photo_1.jpeg") no-repeat fixed center 55%;
+            background: url("../../../images/home_page/attacca/attacca_group_photo_2.jpeg") no-repeat fixed center 55%;
             background-size: cover;
-            filter: grayscale(80%) opacity(0.5);
+            filter: grayscale(100%) brightness(70%);
+            // filter: grayscale(80%)  opacity(0.7);
             // filter: grayscale(80%) hue-rotate(20);
             width: 100%;
             height: 100%;
         }
        
-        h1{
+        &__intro{
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 5em;
             width: 100%;
+            // line-height: 3.5em;
+
+            p{
+                font-size: 1em;
+            }
+
+            h1{
+                font-size: 5em;
+                font-family: $Homefont;
+                font-weight: bolder;
+            }
         }
 
     }
