removed .dark class

--- a/scss/components/_cursor.scss
+++ b/scss/components/_cursor.scss
@@ -12,17 +12,17 @@
     backdrop-filter: invert(80%);
 }
 
-#cursor.dark{
-    position: absolute;
-    // cursor: none;
-    width: 10px;
-    height: 10px;
-    border: 1px solid transparent;
-    border-radius: 50%;
-    transition-duration: 200ms;
-    transition-timing-function: ease-out;
-    // animation: cursorAnimation .5s infinite alternate;
-}
+// #cursor.dark{
+//     position: absolute;
+//     // cursor: none;
+//     width: 10px;
+//     height: 10px;
+//     border: 1px solid transparent;
+//     border-radius: 50%;
+//     transition-duration: 200ms;
+//     transition-timing-function: ease-out;
+//     // animation: cursorAnimation .5s infinite alternate;
+// }
 
 
 
