--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -62,10 +62,10 @@
             }
         }
 
-        &.dark{
-            // background-color: black;
-            backdrop-filter: invert(20%) blur(20px);
-        }
+        // &.dark{
+        //     // background-color: black;
+        //     backdrop-filter: invert(20%) blur(20px);
+        // }
     }
 }
 
